# minimal-cython-cpp-example

./: CMakeLists.txt  README.md
include/hello/: hello.hpp
python/: setup.py
python/hello/: __init__.py  hello.pyx  user.py
src/: hello.cc
